syntax = "proto3";

import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Sane4eck55/CART-LOMS-COMMENTS-NOTIFIER/loms/pkg/api/loms/v1;loms";

service Loms {
    rpc OrderCreate (OrderCreateRequest) returns (OrderCreateResponse) {
        option (google.api.http) = {
            post: "/order/create"
            body: "*"
        };
    }

    rpc OrderInfo (OrderInfoRequest) returns (OrderInfoResponse) {
        option (google.api.http) = {
            get: "/order/info"
        };
    }

    rpc OrderPay (OrderPayRequest) returns (OrderPayResponse) {
        option (google.api.http) = {
            post: "/order/pay"
            body: "*"
        };
    }

    rpc OrderCancel (OrderCancelRequest) returns (OrderCancelResponse) {
        option (google.api.http) = {
            post: "/order/cancel"
            body: "*"
        };
    }

    rpc StocksInfo (StocksInfoRequest) returns (StocksInfoResponse) {
        option (google.api.http) = {
            get: "/stock/info"
     
        };
    }
}

message OrderCreateRequest {
    int64 UserID = 1 [json_name = "userId", (validate.rules).int64.gt = 0];
    repeated Item Items = 2 [json_name = "items", (validate.rules).repeated.min_items = 1];
}

message Item {
    int64 Sku = 1 [json_name = "sku", (validate.rules).int64.gt = 0];
    uint32 Count = 2 [json_name = "count", (validate.rules).uint32.gt = 0];
}

message OrderCreateResponse{
    int64 OrderID = 1 ;
}

message OrderInfoRequest{
    int64 OrderID = 1 [json_name = "orderId", (validate.rules).int64.gt = 0];
    
}

message OrderInfoResponse{
    string Status = 1;
    int64 UserID = 2;
    repeated Item Items = 3;
}

message OrderPayRequest{
    int64 OrderID = 1 [json_name = "orderId", (validate.rules).int64.gt = 0];
}

message OrderPayResponse{}

message OrderCancelRequest{
    int64 OrderID = 1 [json_name = "orderId", (validate.rules).int64.gt = 0];
}

message OrderCancelResponse{}

message StocksInfoRequest{
    int64 Sku = 1 [json_name = "sku", (validate.rules).int64.gt = 0];
}

message StocksInfoResponse{
    uint32 Count = 1;
}